# GLOBAL

./: CMakeLists.txt  ConsoleApplication3.sln  ConsoleApplication3.vcxproj  ConsoleApplication3.vcxproj.filters  mega_main_pipa.cpp  usefull_functions.cpp  usefull_functions.h
